src/objects/QuoteFieldMapping__mdt.object
<CustomObject>
    <fields>
        <fullName>IsTextValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsTextValue?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TargetValue__c</fullName>
        <label>TargetValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>QuoteFieldMapping</label>
    <pluralLabel>QuoteFieldMappings</pluralLabel>
</CustomObject>